--- a/app/views/characters/index.html.erb
+++ b/app/views/characters/index.html.erb
@@ -1,2 +1,4 @@
-<h1>Characters#index</h1>
-<p>Find me in app/views/characters/index.html.erb</p>
+<h1>Elder Scrolls Characters</h1>
+<% @characters.each do |character| %>
+<h2><% character.name%></h2>
+<% end %>
