--- a/app/views/characters/index.html.erb
+++ b/app/views/characters/index.html.erb
@@ -1,4 +1,4 @@
 <h1>Elder Scrolls Characters</h1>
 <% @characters.each do |character| %>
-<h2><% character.name%></h2>
+<h2><%= character.name%></h2>
 <% end %>
