--- a/app/views/characters/index.html.erb
+++ b/app/views/characters/index.html.erb
@@ -1,4 +1,19 @@
 <h1>Elder Scrolls Characters</h1>
+<table>
+  <tr>
+    <th>Name</th>
+    <th>Race</th>
+    <th>City</th>
+    <th>Class</th>
+    <th>System</th>
+  </tr>
 <% @characters.each do |character| %>
-<h2><%= character.name%></h2>
+  <tr>
+    <td><%= character.name%></td>
+    <td><%= character.race_id%></td>
+    <td><%= character.city_id%></td>
+    <td><%= character.character_class_id%></td>
+    <td><%= character.system_id%></td>
+  </tr>
 <% end %>
+</table>
