--- a/app/views/game_systems/index.html.erb
+++ b/app/views/game_systems/index.html.erb
@@ -1,4 +1,17 @@
 <h1>Games Systems</h1>
+<table>
+  <tr>
+    <th>Name</th>
+    <th>Company</th>
+    <th>Input</th>
+
+  </tr>
 <% @game_systems.each do |game| %>
-<h2><%= game.name%></h2>
+  <tr>
+    <td><%= game.name%></td>
+    <td><%= game.company%></td>
+    <td><%= game.input%></td>
+
+  </tr>
 <% end %>
+</table>
