--- a/app/views/regions/index.html.erb
+++ b/app/views/regions/index.html.erb
@@ -1,4 +1,14 @@
 <h1>Regions</h1>
+<table>
+  <tr>
+    <th>Name</th>
+
+
+  </tr>
 <% @regions.each do |region| %>
-<h2><%= region.name%></h2>
+  <tr>
+    <td><%= region.name%></td>
+
+  </tr>
 <% end %>
+</table>
