fixes to character

--- a/app/views/character_classes/index.html.erb
+++ b/app/views/character_classes/index.html.erb
@@ -2,13 +2,13 @@
 <table>
   <tr>
     <th>Name</th>
-    <th>Primary stat</th>
+    <th>Primary Stat</th>
 
   </tr>
 <% @character_classes.each do |character_class| %>
   <tr>
     <td><%= character_class.name%></td>
-    <td><%= character_class.primary_stat%></td>
+    <td><%= character_class.primaryStat%></td>
 
   </tr>
 <% end %>
