--- a/app/views/races/index.html.erb
+++ b/app/views/races/index.html.erb
@@ -9,7 +9,7 @@
 
   <tr>
     <td><%= race.name%></td>
-    <td><%= race.region_id%></td>
+    <td><%= race.region.name%></td>
 
   </tr>
 <% end %>
