--- a/app/views/es_characters/show.html.erb
+++ b/app/views/es_characters/show.html.erb
@@ -2,4 +2,4 @@
     <h2>Race: <%= @es_character.race.name%></h2>
     <h2>Current City: <%= @es_character.city.name%></h2>
     <h2>Class: <%= @es_character.character_class.name%></h2>
-
+<p><%= link_to 'home', root_path%></p>
