--- a/app/views/regions/show.html.erb
+++ b/app/views/regions/show.html.erb
@@ -1,2 +1,4 @@
-<h1>Regions#show</h1>
-<p>Find me in app/views/regions/show.html.erb</p>
+<h1>Region</h1>
+    <h2>Region: <%= @region.name%></h2>
+
+    <p><%= link_to 'Home', root_path%>   |   <%= link_to 'All Regions', regions_path%></p>
