--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,13 @@
   </head>
 
   <body>
+  <header>
+    <nav>
+      <ul>
+        <li></li>
+      </ul>
+    </nav>
+  </header>
     <%= yield %>
   </body>
 </html>
