--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,13 +10,12 @@
   </head>
 
   <body>
-  <header>
-    <nav>
-      <ul>
-        <li></li>
-      </ul>
-    </nav>
-  </header>
+    <%= link_to 'Home', root_path%>   |
+    <%= link_to 'Races', races_path%>   |
+    <%= link_to 'Cities', cities_path%>   |
+    <%= link_to 'Regions', regions_path%>   |
+    <%= link_to 'Classes', character_classes_path%>
+
     <%= yield %>
   </body>
 </html>
